--- a/content/appendices.tex
+++ b/content/appendices.tex
@@ -1,1 +1,46 @@
-\section{Example}
+\section{Appendices}
+
+\subsection{Data}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{assets/3dpltdata.png}
+	\caption{3D plot of Data for $0.2-3.0M_\odot$(only H burning).}
+	\label{fig:3dplt}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{assets/Data0.2-0.4.png}
+	\caption{Data for $0.2-0.5M_\odot$(only H burning).}
+	\label{fig:0.2-0.4}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{assets/Data0.5-1.1.png}
+	\caption{Data for $0.5-1.1M_\odot$(only H burning).}
+	\label{fig:0.5-1.1}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{assets/Data1.2-1.5.png}
+	\caption{Data for $1.2-1.5M_\odot$(only H burning).}
+	\label{fig:1.2-1.5}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{assets/Data1.6-1.9.png}
+	\caption{Data for $1.6-1.9M_\odot$(only H burning).}
+	\label{fig:1.6-1.9}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{assets/Data2.0-2.3.png}
+	\caption{Data for $2.0-2.3M_\odot$(only H burning).}
+	\label{fig:2.0-2.3}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{assets/Data2.4-3.0.png}
+	\caption{Data for $2.4-3.0M_\odot$(only H burning).}
+	\label{fig:2.4-3.0}
+\end{figure}
