--- a/content/literature.tex
+++ b/content/literature.tex
@@ -84,13 +84,15 @@ Table\ref{table:RNeu} \shortcite{vitagliano-2020} shows the different reactions 
 \subsection{Theoretical vs Experimental}
 
 \subsubsection{Theoretical}
-For the theoretical side of stellar physics, most of them are done in doing stellar modelling to predict structures and evolution of certain mass stars. Example of theoretical work done in neutrino is Stellar Neutrino Emission across the Mass–Metallicity Plane done by \shortcite{Farag_2020} where they explore neutrino emission from nonrotating, single-star models across six initial metallicities and 70 initial masses from the zero-age main sequence to the final fate shown in Graph~\ref{Graph:Lcurve} below. The data produced in the model are used in this research in order to train the model.
+
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth]{assets/FaragLA.png}
+	\includegraphics[width=\textwidth,height=\textheight]{assets/FaragLA.png}
 	\caption{Light curve for photons(left) and neutrinos(right).}
 	\label{Graph:Lcurve}
 \end{figure}
+
+For the theoretical side of stellar physics, most of them are done in doing stellar modelling to predict structures and evolution of certain mass stars. Example of theoretical work done in neutrino is Stellar Neutrino Emission across the Mass–Metallicity Plane done by \shortcite{farag-2023} where they explore neutrino emission from nonrotating, single-star models across six initial metallicities and 70 initial masses from the zero-age main sequence to the final fate shown in Graph~\ref{Graph:Lcurve}. The data produced in the model are used in this research in order to train the model.
 
 Since the time and computational power needed to run even one model is quite arduous, by using machine learning, the gap between the modelled grid can be predicted using machine learning.
 
