--- a/ref.bib
+++ b/ref.bib
@@ -98,6 +98,27 @@ title = {On Stellar Evolution in a Neutrino Hertzsprung–Russell Diagram},
 journal = {The Astrophysical Journal},
 abstract = {We explore the evolution of a select grid of solar metallicity stellar models from their pre-main-sequence phase to near their final fates in a neutrino Hertzsprung–Russell diagram, where the neutrino luminosity replaces the traditional photon luminosity. Using a calibrated MESA solar model for the solar neutrino luminosity ( ·  ×  1031 erg s−1) as a normalization, we identify ≃0.3 MeV electron neutrino emission from helium burning during the helium flash (peak , flux  (10 pc/d)2 cm−2 s−1 for a star located at a distance of d parsec, timescale ≃3 days) and the thermal pulse (peak , flux  × 107 (10 pc/d)2 cm−2 s−1, timescale ≃0.1 yr) phases of evolution in low-mass stars as potential probes for stellar neutrino astronomy. We also delineate the contribution of neutrinos from nuclear reactions and thermal processes to the total neutrino loss along the stellar tracks in a neutrino Hertzsprung–Russell diagram. We find, broadly but with exceptions, that neutrinos from nuclear reactions dominate whenever hydrogen and helium burn, and that neutrinos from thermal processes dominate otherwise.}
 }
+@article{farag-2023,
+	author = {Farag, Ebraheem and Timmes, F. X. and Chidester, Morgan T. and Anandagoda, Samalka and Hartmann, Dieter H.},
+	journal = {The Astrophysical Journal Supplement Series},
+	month = {12},
+	number = {1},
+	pages = {5},
+	title = {{Stellar Neutrino Emission across the Mass–Metallicity Plane}},
+	volume = {270},
+	year = {2023},
+	doi = {10.3847/1538-4365/ad0787},
+	url = {https://doi.org/10.3847/1538-4365/ad0787},
+}
+@article{farag-2023data,
+	author = {Farag, Ebraheem and Timmes, F. X. and Chidester, Morgan T. and Anandagoda, Samalka and Hartmann, Dieter},
+	journal = {Zenodo (CERN European Organization for Nuclear Research)},
+	month = {11},
+	title = {{Stellar neutrino emission across the Mass-Metallicity plane}},
+	year = {2023},
+	doi = {10.5281/zenodo.8327401},
+	url = {https://zenodo.org/record/8327401},
+}
 @article{fuller-2022,
 	author = {Fuller, G. M. and Haxton, W. C.},
 	journal = {arXiv (Cornell University)},
