--- a/content/method.tex
+++ b/content/method.tex
@@ -23,9 +23,9 @@ Sci Kit Learn was used, specifically the Linear Regression module:
     y=\beta_{0}+\beta_{1}x_1+\beta_{2}x_2+\beta_{3}x_3+...+\beta_{n}x_n
 \end{equation}
 where 
-$y$ is the independent variables, $\beta_0$ is the intercept, $\beta_{1}, \beta_{2}, \beta_{3},..., \beta_{n}$ is the coefficient. 
+$y$ is the independent variables, $\beta_0$ is the intercept, $\beta_{1}, \beta_{2}, \beta_{3},..., \beta_{n}$ is the coefficient \shortcite{epperson-2013}. 
 
-The basis of linear regression is the same as $y= mx+c$ but sklearn used more coefficients to predict the model. Linear regression estimate  coefficient such that the sum of error is very small ~  $10^{-4}$ (the tolerance adopted by sklearn). This method is also known as the least square method.
+The basis of linear regression is the same as $y= mx+c$ but sklearn used more coefficients to predict the model. Linear regression estimate  coefficient such that the sum of error is very small ~  $10^{-4}$ (the tolerance adopted by sklearn) \shortcite{jolly-2018}. This method is also known as the least square method.
 
 In this project the code will calculate the gradient B (written as J)  between the inputs which are the Masses and the Luminosity and the star ages.
 \begin{equation}
