--- a/frontmatter/original.tex
+++ b/frontmatter/original.tex
@@ -21,7 +21,7 @@ Title of Project Paper (``this Work''):
 
 \title
 
-Field of Study: Experimental Physics
+Field of Study: Theoretical Astrophysics
 \vspace{1em}
 
 I do solemnly and sincerely declare that:
@@ -50,6 +50,9 @@ I do solemnly and sincerely declare that:
 \vfill
 
 \hspace{1cm}Candidate's Signature\hfill Date:\ \date
+\begin{figure}[H]
+	\includegraphics[width=0.25\textwidth]{assets/sign.jpg}
+\end{figure}
 \vspace{.1in}
 
 Subscribed and solemnly declared before,
