--- a/ref.bib
+++ b/ref.bib
@@ -110,6 +110,20 @@ abstract = {We explore the evolution of a select grid of solar metallicity stell
 	doi = {10.3847/1538-4365/ad0787},
 	url = {https://doi.org/10.3847/1538-4365/ad0787},
 }
+@book{epperson-2013,
+	author = {Epperson, James F.},
+	month = {10},
+	publisher = {John Wiley \& Sons},
+	title = {{An introduction to numerical methods and analysis}},
+	year = {2013},
+}
+@book{jolly-2018,
+	author = {Jolly, Kevin},
+	month = {10},
+	publisher = {Packt Publishing Ltd},
+	title = {{Machine Learning with scikit-learn Quick Start Guide}},
+	year = {2018},
+}
 @article{farag-2023data,
 	author = {Farag, Ebraheem and Timmes, F. X. and Chidester, Morgan T. and Anandagoda, Samalka and Hartmann, Dieter},
 	journal = {Zenodo (CERN European Organization for Nuclear Research)},
